--- a/RaulLinoApp/www/css/index.css
+++ b/RaulLinoApp/www/css/index.css
@@ -124,6 +124,8 @@ body {
 #map {
     height: 100%;
     width: 100%;
+    transform: translate(0%, -200%);
+    position: absolute;
 }
 
 .carousel-control-prev-icon {
