--- a/RaulLinoApp/www/css/index.css
+++ b/RaulLinoApp/www/css/index.css
@@ -142,3 +142,9 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+#imagem_fundo {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
