--- a/RaulLinoApp/www/css/index.css
+++ b/RaulLinoApp/www/css/index.css
@@ -116,7 +116,7 @@ body {
 
 @media screen and (prefers-color-scheme: dark) {
     body {
-        background-image: linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
+        background-image: linear-gradient(to bottom, #ffffff);
     }
 }
 
